--- a/.github/workflows/coveo-example-library.yml
+++ b/.github/workflows/coveo-example-library.yml
@@ -1,44 +1,51 @@
-# the name of the workflow must match the name of the project and project folder.
+# the name of the workflow, the library name and the source folder name must be the same.
 name: coveo-example-library
 on: [push]
+
 jobs:
-  check_if_changed:
+  check-if-changed:
+    name: detect changes
     runs-on: ubuntu-20.04
-    env:
-      PROJECT_FOLDER: coveo-example-library
+    if: github.ref != 'refs/heads/main'
 
     outputs:
-      changes_detected: ${{ steps.check_changes.outputs.changes_detected }}
+      changes-detected: ${{ steps.detect-changes.outputs.changes-detected }}
 
     steps:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
 
-      - id: check_changes
-        run: |
-          if git diff ${{ github.sha }} --name-only | grep '^${{ github.workflow }}/'; then
-              echo "Changes detected!"
-              echo "::set-output name=changes_detected::true"
-          else
-              echo "No changes detected!"
-              echo "::set-output name=changes_detected::false"
-          fi
+      - uses: actions/detect-changes@v1
+        id: detect-changes
+        with:
+          folder: ${{ github.workflow }}/
 
 
   pyprojectci:
+    name: pyproject ci
     runs-on: ubuntu-20.04
-    needs: check_if_changed
-    if: needs.check_if_changed.outputs.changes_detected == 'true'
+    needs: check-if-changed
+    if: (github.ref == 'refs/heads/main') || (needs.check-if-changed.outputs.changes-detected == 'true')
     steps:
+      - uses: actions/checkout@v2
+
       - name: prepare system and paths
         run: |
           apt update && apt install python3 python3-dev python3-pip gcc curl -y
           echo "/home/runner/.local/bin:/home/runner/.poetry/bin" >> $GITHUB_PATH
 
       - name: python setup
-        run: python3 -m pip install --upgrade setuptools wheel ./coveo-pyproject --user
+        run: |
+          python3 -m pip install --upgrade setuptools wheel --user
+          curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python -
+
+      - name: install pyproject
+        run: |
+          cd coveo-pyproject
+          poetry install
 
       - name: run pyproject ci
         run: |
-          pyproject ci ${{ github.workflow }}
+          cd coveo-pyproject
+          poetry run pyproject ci ${{ github.workflow }} --exact-match
