Feel like this is not going to work either :(

--- a/.github/workflows/coveo-example-library.yml
+++ b/.github/workflows/coveo-example-library.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           fetch-depth: 0
 
-      - uses: 'actions/detect-changes@${{ github.sha }}'
+      - uses: ${{ format('actions/detect-changes@{0}', github.sha) }}
         id: detect-changes
         with:
           folder: ${{ github.workflow }}/
