--- a/.github/workflows/coveo-example-library.yml
+++ b/.github/workflows/coveo-example-library.yml
@@ -14,8 +14,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.8, 3.9]
-        os: [ubuntu-20.04, windows-2019, macos-10.15]
+        python-version: [3.8]
+        #python-version: [3.8, 3.9]
+        os: [ubuntu-20.04]
+        #os: [ubuntu-20.04, windows-2019, macos-10.15]
 
     steps:
       - name: Checkout repository
@@ -49,7 +51,7 @@ jobs:
           python-version: 3.9
 
       - name: Publish to pypi
-        if: github.ref == 'refs/heads/main'
+        #if: github.ref == 'refs/heads/main'
         uses: ./.github/workflows/actions/publish-to-pypi
         with:
           project-name: ${{ github.workflow }}
