--- a/.github/workflows/actions/publish-to-pypi/action.yml
+++ b/.github/workflows/actions/publish-to-pypi/action.yml
@@ -45,5 +45,7 @@ runs:
       run: |
         TAG_NAME=${{ inputs.project-name }}.${{ steps.get-next-version.outputs.next-version }}
         echo "This release will be tagged as $TAG_NAME"
+        git config user.name "github-actions"
+        git config user.email "actions@users.noreply.github.com"
         git tag --annotate --message="Automated tagging system" $TAG_NAME ${{ github.ref }}
         git push origin $TAG_NAME
