Implement tagging published versions

--- a/.github/workflows/coveo-example-library.yml
+++ b/.github/workflows/coveo-example-library.yml
@@ -3,6 +3,7 @@ on:
   push:
     paths:
       - 'coveo-example-library/**'
+      - '.github/workflows/**'
   workflow_dispatch: {}
 
 jobs:
@@ -46,7 +47,6 @@ jobs:
           python-version: 3.9
 
       - name: Publish to pypi
-        if: github.ref == 'refs/heads/main'
         uses: ./.github/workflows/actions/publish-to-pypi
         with:
           project-name: ${{ github.workflow }}
