--- a/coveo-functools/pyproject.toml
+++ b/coveo-functools/pyproject.toml
@@ -17,6 +17,16 @@ attrs = "*"
 coveo-testing = { path = "../coveo-testing/", develop = true }
 
 
+[tool.coveo.ci]
+pytest = true
+offline_build = true
+black = true
+
+
+[tool.black]
+line_length = 120
+
+
 [build-system]
 requires = ["poetry_core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
