--- a/coveo-itertools/pyproject.toml
+++ b/coveo-itertools/pyproject.toml
@@ -14,6 +14,16 @@ coveo-testing = { path = "../coveo-testing/", develop = true }
 pytest = "*"
 
 
+[tool.coveo.ci]
+pytest = true
+offline_build = true
+black = true
+
+
+[tool.black]
+line_length = 120
+
+
 [build-system]
 requires = ["poetry_core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
