--- a/coveo-pyproject/pyproject.toml
+++ b/coveo-pyproject/pyproject.toml
@@ -35,6 +35,15 @@ pytest = "*"
 pyproject = "coveo_pyproject.commands:pyproject"
 
 
+[tool.coveo.ci]
+pytest = true
+offline_build = true
+black = true
+
+[tool.black]
+line_length = 120
+
+
 [build-system]
 requires = ["poetry_core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
