--- a/coveo-testing-extras/pyproject.toml
+++ b/coveo-testing-extras/pyproject.toml
@@ -23,6 +23,16 @@ coveo-testing = { path = "../coveo-testing/", develop = true }
 typing_extensions = "*"
 
 
+[tool.coveo.ci]
+pytest = true
+offline_build = true
+black = true
+
+
+[tool.black]
+line_length = 120
+
+
 [build-system]
 requires = ["poetry_core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
