--- a/coveo-testing/pyproject.toml
+++ b/coveo-testing/pyproject.toml
@@ -16,6 +16,16 @@ pytest = "*"
 typing_extensions = "*"
 
 
+[tool.coveo.ci]
+pytest = true
+offline_build = true
+black = true
+
+
+[tool.black]
+line_length = 120
+
+
 [build-system]
 requires = ["poetry_core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
