--- a/coveo-testing/pyproject.toml
+++ b/coveo-testing/pyproject.toml
@@ -18,12 +18,12 @@ typing_extensions = "*"
 
 [tool.coveo.ci]
 pytest = true
-offline_build = true
+offline-build = true
 black = true
 
 
 [tool.black]
-line_length = 120
+line-length = 100
 
 
 [build-system]
