--- a/coveo-pypi-cli/pyproject.toml
+++ b/coveo-pypi-cli/pyproject.toml
@@ -30,12 +30,12 @@ pypi = "coveo_pypi_cli.cli:pypi"
 
 [tool.coveo.ci]
 pytest = true
-offline_build = true
+offline-build = true
 black = true
 
 
 [tool.black]
-line_length = 120
+line-length = 100
 
 
 [build-system]
