--- a/coveo-pyproject/pyproject.toml
+++ b/coveo-pyproject/pyproject.toml
@@ -37,11 +37,11 @@ pyproject = "coveo_pyproject.commands:pyproject"
 
 [tool.coveo.ci]
 pytest = true
-offline_build = true
+offline-build = true
 black = true
 
 [tool.black]
-line_length = 120
+line-length = 100
 
 
 [build-system]
