--- a/.github/workflows/coveo-styles.yml
+++ b/.github/workflows/coveo-styles.yml
@@ -33,7 +33,6 @@ jobs:
   publish:
     name: Publish to pypi.org
     runs-on: ubuntu-20.04
-    if: github.ref == 'refs/heads/main'
     needs: pyprojectci
 
     steps:
@@ -46,8 +45,8 @@ jobs:
           python-version: 3.9
 
       - name: Publish to pypi
-        if: github.ref == 'refs/heads/main'
         uses: ./.github/workflows/actions/publish-to-pypi
         with:
           project-name: ${{ github.workflow }}
-          pypi-token: ${{ secrets.PYPI_TOKEN_COVEO_EXAMPLE_LIBRARY }}
+          pypi-token: ${{ secrets.PYPI_TOKEN }}
+          dry-run: ${{ github.ref != 'refs/heads/main' }}
