--- a/coveo-example-library/pyproject.toml
+++ b/coveo-example-library/pyproject.toml
@@ -2,6 +2,9 @@
 name = "coveo-example-library"
 version = "0.0.1"
 description = "coveo-python-oss example library"
+license = "Apache-2.0"
+readme = "README.md"
+repository = "https://github.com/coveooss/coveo-python-oss"
 authors = ["Jonathan Piché <jpiche@coveo.com>"]
 
 
