--- a/coveo-itertools/pyproject.toml
+++ b/coveo-itertools/pyproject.toml
@@ -2,8 +2,10 @@
 name = "coveo-itertools"
 version = "1.0.0"
 description = "Utilities and helpers related to collections."
-authors = ["Jonathan piché <jpiche@coveo.com>"]
-
+license = "Apache-2.0"
+readme = "README.md"
+repository = "https://github.com/coveooss/coveo-python-oss"
+authors = ["Jonathan Piché <jpiche@coveo.com>"]
 
 [tool.poetry.dependencies]
 python = ">=3.8"
