--- a/.github/workflows/coveo-example-library.yml
+++ b/.github/workflows/coveo-example-library.yml
@@ -3,6 +3,7 @@ on:
   push:
     paths:
       - 'coveo-example-library/**'
+      - '.github/workflows/**'
   workflow_dispatch: {}
 
 jobs:
@@ -49,4 +50,5 @@ jobs:
         with:
           project-name: ${{ github.workflow }}
           pypi-token: ${{ secrets.PYPI_TOKEN_COVEO_EXAMPLE_LIBRARY }}
-          dry-run: ${{ github.ref != 'refs/heads/main' }}
+          dry-run: true
+          # dry-run: ${{ github.ref != 'refs/heads/main' }}
