--- a/coveo-pypi-cli/pyproject.toml
+++ b/coveo-pypi-cli/pyproject.toml
@@ -1,11 +1,11 @@
 [tool.poetry]
 name = "coveo-pypi-cli"
 version = "1.0.0"
-description = "Query pypi from command line."
+description = "Query and compute pypi versions from command line."
 license = "Apache-2.0"
 readme = "README.md"
 repository = "https://github.com/coveooss/coveo-python-oss"
-authors = ["Jonathan Piché <jpiche@coveo.com>"]
+authors = ["Jonathan Piché <tools@coveo.com>"]
 
 [tool.poetry.dependencies]
 python = ">=3.8"
