--- a/coveo-pyproject/pyproject.toml
+++ b/coveo-pyproject/pyproject.toml
@@ -5,7 +5,7 @@ description = "Python packaging and development utilities / poetry on steroids."
 license = "Apache-2.0"
 readme = "README.md"
 repository = "https://github.com/coveooss/coveo-python-oss"
-authors = ["Jonathan Piché <jpiche@coveo.com>"]
+authors = ["Jonathan Piché <tools@coveo.com>"]
 
 packages = [
     { include = "coveo_pyproject/**/*" },
