--- a/coveo-styles/pyproject.toml
+++ b/coveo-styles/pyproject.toml
@@ -5,7 +5,7 @@ description = "Styles, colors and emojis for the command line."
 license = "Apache-2.0"
 readme = "README.md"
 repository = "https://github.com/coveooss/coveo-python-oss"
-authors = ["Jonathan Piché <jpiche@coveo.com>"]
+authors = ["Jonathan Piché <tools@coveo.com>"]
 
 [tool.poetry.dependencies]
 python = ">=3.8"
