--- a/coveo-testing/pyproject.toml
+++ b/coveo-testing/pyproject.toml
@@ -1,11 +1,11 @@
 [tool.poetry]
 name = "coveo-testing"
 version = "1.0.0"
-description = "Testing utilities"
+description = "Lightweight testing helpers"
 license = "Apache-2.0"
 readme = "README.md"
 repository = "https://github.com/coveooss/coveo-python-oss"
-authors = ["Jonathan Piché <jpiche@coveo.com>"]
+authors = ["Jonathan Piché <tools@coveo.com>"]
 
 [tool.poetry.dependencies]
 python = ">=3.8"
