--- a/coveo-functools/pyproject.toml
+++ b/coveo-functools/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "coveo-functools"
 version = "1.0.0"
-description = "Function-related tools."
+description = "Function-related tools"
 license = "Apache-2.0"
 readme = "README.md"
 repository = "https://github.com/coveooss/coveo-python-oss"
