--- a/coveo-pypi-cli/pyproject.toml
+++ b/coveo-pypi-cli/pyproject.toml
@@ -11,6 +11,7 @@ authors = ["Jonathan Piché <tools@coveo.com>"]
 python = ">=3.8"
 
 click = "*"
+coveo-settings = { version = "^1.0.0" }
 coveo-styles = { version = "^1.0.0" }
 coveo-systools = { version = "^1.0.0" }
 requests = "*"
@@ -19,6 +20,7 @@ typing-extensions = "*"
 
 [tool.poetry.dev-dependencies]
 coveo-functools = { path = "../coveo-functools/", develop = true }
+coveo-settings = { path = "../coveo-settings/" , develop = true }
 coveo-styles = { path = "../coveo-styles/", develop = true }
 coveo-systools = { path = "../coveo-systools/", develop = true }
 coveo-testing = { path = "../coveo-testing/", develop = true }
