--- a/.github/workflows/actions/pyproject-ci/action.yml
+++ b/.github/workflows/actions/pyproject-ci/action.yml
@@ -13,11 +13,11 @@ runs:
   steps:
     - name: Setup/upgrade the python tools
       shell: bash
-      run: python -m pip install --upgrade pip wheel setuptools poetry==1.1.4 --user --no-warn-script-location
+      run: python -m pip install --upgrade pip wheel setuptools poetry==1.1.6 --user --no-warn-script-location
 
     - name: Run pyproject ci
       shell: bash
       working-directory: coveo-stew
       run: |
         python -m poetry install
-        python -m poetry run pyproject ci ${{ inputs.project-name }} --exact-match
+        python -m poetry run stew ci ${{ inputs.project-name }} --exact-match
