--- a/.github/workflows/coveo-pypi-cli.yml
+++ b/.github/workflows/coveo-pypi-cli.yml
@@ -1,8 +1,9 @@
 name: coveo-pypi-cli
 on:
-  push:
-    paths:
-      - 'coveo-pypi-cli/**'
+  pull_request:
+    types: [opened, synchronize, reopened]
+    branches:
+      - main
   workflow_dispatch: {}
 
 jobs:
