fix workflow to run in main

--- a/.github/workflows/coveo-testing-extras.yml
+++ b/.github/workflows/coveo-testing-extras.yml
@@ -2,6 +2,7 @@ name: coveo-testing-extras
 on:
   pull_request:
     types: [opened, synchronize, reopened]
+  push:
     branches:
       - main
   workflow_dispatch: {}
