--- a/.github/workflows/coveo-styles.yml
+++ b/.github/workflows/coveo-styles.yml
@@ -2,6 +2,7 @@ name: coveo-styles
 on:
   pull_request:
     types: [opened, synchronize, reopened]
+  push:
     branches:
       - main
   workflow_dispatch: {}
