--- a/.github/workflows/coveo-systools.yml
+++ b/.github/workflows/coveo-systools.yml
@@ -2,6 +2,7 @@ name: coveo-systools
 on:
   pull_request:
     types: [opened, synchronize, reopened]
+  push:
     branches:
       - main
   workflow_dispatch: {}
