check if workflow tests launch

--- a/.github/workflows/coveo-example-library.yml
+++ b/.github/workflows/coveo-example-library.yml
@@ -12,6 +12,7 @@ on:
     types: [opened, synchronize, reopened]
     paths:
       - 'coveo-example-library/**'
+      - '.github/workflows/**'
 
   workflow_dispatch: {}
 
