--- a/coveo-testing/pyproject.toml
+++ b/coveo-testing/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "coveo-testing"
-version = "1.0.0"
+version = "2.0.0"
 description = "Lightweight testing helpers"
 license = "Apache-2.0"
 readme = "README.md"
@@ -8,14 +8,16 @@ repository = "https://github.com/coveooss/coveo-python-oss"
 authors = ["Jonathan Piché <tools@coveo.com>"]
 
 [tool.poetry.dependencies]
-python = ">=3.6"
+python = ">=3.8"
 
 attrs = "*"
 pytest = "*"
 
 
 [tool.poetry.dev-dependencies]
+black = { version = "*", allow-prereleases = true }
 typing_extensions = "*"
+mypy = "*"
 
 
 [tool.stew.ci]
