--- a/coveo-itertools/pyproject.toml
+++ b/coveo-itertools/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "coveo-itertools"
-version = "1.0.0"
+version = "2.0.0"
 description = "Collection-related helpers."
 license = "Apache-2.0"
 readme = "README.md"
@@ -8,11 +8,13 @@ repository = "https://github.com/coveooss/coveo-python-oss"
 authors = ["Jonathan Piché <tools@coveo.com>"]
 
 [tool.poetry.dependencies]
-python = ">=3.6"
+python = ">=3.8"
 
 
 [tool.poetry.dev-dependencies]
+black = { version = "*", allow-prereleases = true }
 coveo-testing = { path = "../coveo-testing/", develop = true }
+mypy = "*"
 pytest = "*"
 
 
