--- a/coveo-pypi-cli/pyproject.toml
+++ b/coveo-pypi-cli/pyproject.toml
@@ -19,11 +19,13 @@ typing-extensions = "*"
 
 
 [tool.poetry.dev-dependencies]
+black = { version = "21.5b2", allow-prereleases = true }
 coveo-functools = { path = "../coveo-functools/", develop = true }
 coveo-settings = { path = "../coveo-settings/" , develop = true }
 coveo-styles = { path = "../coveo-styles/", develop = true }
 coveo-systools = { path = "../coveo-systools/", develop = true }
 coveo-testing = { path = "../coveo-testing/", develop = true }
+mypy = "0.812"
 pytest = "*"
 requests-mock = "*"
 
