--- a/coveo-settings/pyproject.toml
+++ b/coveo-settings/pyproject.toml
@@ -13,7 +13,9 @@ python = ">=3.8"
 
 
 [tool.poetry.dev-dependencies]
+black = { version = "21.5b2", allow-prereleases = true }
 coveo-testing = { path = "../coveo-testing", develop = true }
+mypy = "0.812"
 
 
 [tool.stew.ci]
