--- a/coveo-systools/pyproject.toml
+++ b/coveo-systools/pyproject.toml
@@ -15,10 +15,10 @@ typing_extensions = "*"
 
 
 [tool.poetry.dev-dependencies]
-black = { version = "*", allow-prereleases = true }
+black = { version = "21.5b2", allow-prereleases = true }
 coveo-functools = { path = "../coveo-functools/", develop = true }
 coveo-testing = { path = "../coveo-testing/", develop = true }
-mypy = "*"
+mypy = "0.812"
 
 
 [tool.stew.ci]
