Revert "bump stew"
This reverts commit 1c77ddeac238e55dd48aa3d4e8ee7438c81b5396.

--- a/coveo-stew/pyproject.toml
+++ b/coveo-stew/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "coveo-stew"
-version = "2.0.0"
+version = "1.2.0"
 description = "Opinionated python packaging and development utilities"
 license = "Apache-2.0"
 readme = "README.md"
@@ -13,15 +13,15 @@ packages = [
 
 
 [tool.poetry.dependencies]
-python = ">=3.8"
-black = { version = "21.5b2", allow-prereleases = true }
+python = ">=3.6"
+black = { version = "20.8b1", allow-prereleases = true }
 click = "*"
-coveo-functools = { version = "^2.0.0" }
-coveo-itertools = { version = "^2.0.0" }
-coveo-systools = { version = "^2.0.0" }
-coveo-styles = { version = "^2.0.0" }
+coveo-functools = { version = "^1.0.0" }
+coveo-itertools = { version = "^1.0.0" }
+coveo-systools = { version = "^1.0.0" }
+coveo-styles = { version = "^1.0.0" }
 junit-xml = "*"
-mypy = "0.812"
+mypy = "*"
 poetry = "^1.1.4"
 toml = "*"
 typing_extensions = "*"
