--- a/coveo-functools/pyproject.toml
+++ b/coveo-functools/pyproject.toml
@@ -18,6 +18,7 @@ typing_extensions = "*"
 attrs = "*"
 black = { version = "21.6b0", allow-prereleases = true }
 coveo-testing = { path = "../coveo-testing/", develop = true }
+flake8 = "*"
 mypy = "0.910"
 
 
@@ -25,6 +26,9 @@ mypy = "0.910"
 pytest = true
 offline-build = true
 black = true
+
+[tool.stew.ci.custom-runners]
+flake8 = { args = ["--ignore=E501,W503"]}
 
 
 [tool.black]
