try to see if the workflow dispatch default influences anythting

--- a/.github/workflows/coveo-functools.yml
+++ b/.github/workflows/coveo-functools.yml
@@ -17,7 +17,7 @@ on:
       dry-run:
         description: "Simulate the publish operation."
         required: false
-        default: 'true'
+        default: 'false'
 
 jobs:
   pyprojectci:
