--- a/.github/workflows/coveo-testing-extras.yml
+++ b/.github/workflows/coveo-testing-extras.yml
@@ -65,4 +65,4 @@ jobs:
           project-name: ${{ github.workflow }}
           pypi-token: ${{ secrets.PYPI_TOKEN_COVEO_TESTING_EXTRAS }}
           pre-release: ${{ github.ref != 'refs/heads/main' }}
-          dry-run: ${{ github.event.inputs.publish != 'true' }}
+          dry-run: ${{ github.ref != 'refs/heads/main' && github.event.inputs.publish != 'true' }}
