typo in step name

--- a/.github/workflows/coveo-arnparse.yml
+++ b/.github/workflows/coveo-arnparse.yml
@@ -42,7 +42,7 @@ jobs:
   publish:
     name: Publish to pypi.org
     runs-on: ubuntu-20.04
-    needs: pyprojectci
+    needs: stew
 
     steps:
       - name: Checkout repository
