--- a/coveo-stew/pyproject.toml
+++ b/coveo-stew/pyproject.toml
@@ -14,7 +14,7 @@ packages = [
 
 [tool.poetry.dependencies]
 python = ">=3.8,<4"
-black = "22.3"
+black = { version = "21.6b0", allow-prereleases = true }
 click = "*"
 coveo-functools = "^2.0.0"
 coveo-itertools = "^2.0.0"
