--- a/coveo-pypi-cli/pyproject.toml
+++ b/coveo-pypi-cli/pyproject.toml
@@ -10,7 +10,7 @@ authors = ["Jonathan Piché <tools@coveo.com>"]
 [tool.poetry.dependencies]
 python = ">=3.8,<4"
 
-click = "*"
+click = ">=8.1"
 coveo-settings = { version = "^2.0.0" }
 coveo-styles = { version = "^2.0.0" }
 coveo-systools = { version = "^2.0.0" }
