add 3rd party linters

--- a/coveo-arnparse/pyproject.toml
+++ b/coveo-arnparse/pyproject.toml
@@ -14,8 +14,11 @@ python = ">=3.8"
 
 [tool.poetry.dev-dependencies]
 bandit = "*"
+black = "*"
 coveo-testing = { path = "../coveo-testing", develop = true }
 flake8 = "*"
+mypy = "0.950"
+pytest = "*"
 
 
 [tool.stew.ci]
