--- a/coveo-functools/pyproject.toml
+++ b/coveo-functools/pyproject.toml
@@ -16,8 +16,12 @@ typing_extensions = "*"
 
 [tool.poetry.dev-dependencies]
 attrs = "*"
+bandit = "*"
+black = "*"
 coveo-testing = { path = "../coveo-testing/", develop = true }
 flake8 = "*"
+mypy = "0.950"
+pytest = "*"
 
 
 [tool.stew.ci]
