--- a/coveo-itertools/pyproject.toml
+++ b/coveo-itertools/pyproject.toml
@@ -12,9 +12,11 @@ python = ">=3.8"
 
 
 [tool.poetry.dev-dependencies]
+bandit = "*"
+black = "*"
 coveo-testing = { path = "../coveo-testing/", develop = true }
+mypy = "0.950"
 pytest = "*"
-
 
 [tool.stew.ci]
 pytest = true
