--- a/coveo-systools/pyproject.toml
+++ b/coveo-systools/pyproject.toml
@@ -15,8 +15,12 @@ typing_extensions = "*"
 
 
 [tool.poetry.dev-dependencies]
+bandit = "*"
+black = "*"
 coveo-functools = { path = "../coveo-functools/", develop = true }
 coveo-testing = { path = "../coveo-testing/", develop = true }
+mypy = "0.950"
+pytest = "*"
 
 
 [tool.stew.ci]
