--- a/coveo-testing-extras/pyproject.toml
+++ b/coveo-testing-extras/pyproject.toml
@@ -18,10 +18,15 @@ docker = "*"
 
 
 [tool.poetry.dev-dependencies]
+bandit = "*"
+black = "*"
 coveo-functools = { path = "../coveo-functools/", develop = true }
 coveo-settings = { path = "../coveo-settings/", develop = true }
 coveo-systools = { path = "../coveo-systools/", develop = true }
 coveo-testing = { path = "../coveo-testing/", develop = true }
+flake8 = "*"
+mypy = "0.950"
+pytest = "*"
 types-requests = "*"
 typing_extensions = "*"
 
