forgot that part

--- a/.github/workflows/actions/stew-ci/action.yml
+++ b/.github/workflows/actions/stew-ci/action.yml
@@ -26,6 +26,7 @@ runs:
         cache: poetry
 
     - name: Ensure correct python version
+      shell: bash
       run: poetry env use ${{ inputs.python-version }}
 
     - name: Run stew ci
