use the correct working dir for poetry env use

--- a/.github/workflows/actions/stew-ci/action.yml
+++ b/.github/workflows/actions/stew-ci/action.yml
@@ -27,6 +27,7 @@ runs:
 
     - name: Ensure correct python version
       shell: bash
+      working-directory: ${{ inputs.project-name }}
       run: poetry env use ${{ inputs.python-version }}
 
     - name: Run stew ci
